--- a/src/assets/css/ipTracker.css
+++ b/src/assets/css/ipTracker.css
@@ -1,9 +1,12 @@
 :root{
-    font-family: "Rubik";
+    font-family: "Rubik",Arial,sans-serif;
     --dark-gray: hsl(0, 0%, 59%);
     --very-dark-gray: hsl(0, 0%, 17%);
+    --light-gray-skeleton-animation: hsl(200,20%,70%);
+    --dark-gray-skeleton-animation: hsl(200,20%,95%) ;
 }
 
+/* Banner style */
 .ipTracker-title{
     font-size: 2.2em ;
     padding-top: 30px;
@@ -47,9 +50,10 @@
 }
 
 /* ipTracker-location-info */
+
 .ipTracker-info{
     position: relative;
-    background-color: red;
+    z-index: 5;
 }
 
 .ipTracker-location-info{
@@ -65,6 +69,7 @@
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0);
+    /*pointer-events: none;*/
 }
 
 .ipTracker-block{
@@ -94,12 +99,6 @@
 }
 
 
-
-
-
-
-
-
 /* Media queries*/
 
 @media (max-width:  700px) {
@@ -115,6 +114,8 @@
     .ipTracker-location-info {
         flex-direction: column;
         width: 80%;
+        text-align: center;
+        margin-top: 30px;
     }
 
     .ipTracker-block {
